# vanessa_logger

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  INSTALL.in  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  header  header.short  libvanessa_logger0.spec.in  vanessa-logger.pc.in  vanessa_logger-0.0.0.lsm  vanessa_logger-0.0.1.lsm  vanessa_logger-0.0.2.lsm  vanessa_logger-0.0.3.lsm  vanessa_logger-0.0.4.lsm  vanessa_logger-0.0.5.lsm  vanessa_logger-0.0.6.lsm  vanessa_logger.spec.in
debian/: Makefile  Makefile.am  changelog  control  copyright  libvanessa-logger-dev.dirs  libvanessa-logger-dev.files  libvanessa-logger-sample.dirs  libvanessa-logger-sample.files  libvanessa-logger.files  libvanessa-logger0.files  libvanessa-logger0.postinst  libvanessa-logger0.shlibs  libvanessa_logger0.postinst  rules  shlibs.local
libvanessa_logger/: Makefile.am  vanessa_logger.c  vanessa_logger.h
sample/: .cvsignore  Makefile.am  Makefile.in  vanessa_logger_sample.1  vanessa_logger_sample.c  vanessa_logger_sample_config.h.in
