dnl Process this file with autoconf to produce a configure script.

AC_INIT(libvanessa_logger/vanessa_logger.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vanessa_logger, 0.0.0pre1)

AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(flim)

AC_OUTPUT(
libvanessa_logger/Makefile 
sample/Makefile 
sample/vanessa_logger_sample_config.h 
Makefile
vanessa_logger.spec
INSTALL
)
