######################################################################
# Makefile.am                                           September 2000
# Horms                                             horms@verge.net.au
#
# vanessa_logger
# Generic logging layer
# Copyright (C) 2000-2003  Horms
# 
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
# 
# This library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
# 02111-1307 USA
#
######################################################################

lib_LTLIBRARIES = libvanessa_logger.la

include_HEADERS = vanessa_logger.h

libvanessa_logger_la_SOURCES = \
vanessa_logger.h \
vanessa_logger.c

libvanessa_logger_la_LDFLAGS    = -version-info 0:3:0
